--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -108,6 +108,9 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="form-group d-flex justify-content-center">
+                <a class="mt-1 me-3" *ngIf="!isLoginMode" (click)="changeMode()"
+                  ><fa-icon [icon]="faArrowLeft"></fa-icon
+                ></a>
                 <button
                   [disabled]="!authForm.valid"
                   type="submit"
@@ -124,6 +127,16 @@
                 >
                   Sign Up
                 </button>
+              </div>
+              <div
+                *ngIf="isLoginMode"
+                class="form-group d-flex justify-content-center mt-3"
+              >
+                <a (click)="onResetPassword()"
+                  ><span style="color: blue; font-size: small"
+                    >Forgot your password?</span
+                  >
+                </a>
               </div>
             </div>
           </div>
