--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
       class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
     >
       <a
-        [routerLink]="'/home'"
+        [routerLink]="['/user', userLoggedIn.password]"
         class="d-flex align-items-center mb-2 mb-lg-0 me-5"
       >
         <fa-icon [icon]="faChartPie"></fa-icon>
@@ -12,10 +12,10 @@
       <ul
         class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
       >
-        <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
+        <li><a class="nav-link px-2 link-secondary">Markets</a></li>
+        <!-- <li><a class="nav-link px-2 link-dark">Inventory</a></li>
+        <li><a class="nav-link px-2 link-dark">Customers</a></li>
+        <li><a class="nav-link px-2 link-dark">Products</a></li> -->
       </ul>
 
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
@@ -26,31 +26,27 @@
           aria-label="Search"
         />
       </form>
-
       <div class="dropdown text-end">
         <a
-          href="#"
+          appDropdown
           class="d-block link-dark text-decoration-none dropdown-toggle"
           id="dropdownUser1"
           data-bs-toggle="dropdown"
           aria-expanded="false"
-        >
-          <img
+          >{{ userData.username }}
+          <!-- <img
             src="https://github.com/mdo.png"
             alt="mdo"
             width="32"
             height="32"
             class="rounded-circle"
-          />
+          /> -->
         </a>
-        <ul
-          class="dropdown-menu text-small show"
-          aria-labelledby="dropdownUser1"
-        >
-          <li><a class="dropdown-item">New project...</a></li>
-          <li><a class="dropdown-item">Settings</a></li>
+        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+          <!-- <li><a class="dropdown-item">New project...</a></li>
+          <li><a class="dropdown-item">Settings</a></li> -->
           <li><a class="dropdown-item">Profile</a></li>
-          <li><hr class="dropdown-divider" /></li>
+          <!-- <li><hr class="dropdown-divider" /></li> -->
           <li><a class="dropdown-item" (click)="onLogout()">Sign out</a></li>
         </ul>
       </div>
