--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -17,7 +17,7 @@
       >
         <form [formGroup]="authForm" (ngSubmit)="onSubmit()" class="w-75">
           <div *ngIf="!isPasswordForgot">
-            <div
+            <!-- <div
               *ngIf="!isLoginMode"
               class="row mb-2 d-flex align-items-center"
             >
@@ -42,7 +42,7 @@
               class="help-block bg-warning mb-2 rounded d-flex justify-content-center"
             >
               <span>Please enter a username</span>
-            </div>
+            </div> -->
             <div class="row mb-2 d-flex align-items-center">
               <div class="col-sm-12">
                 <div class="form-group">
