--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,7 +33,7 @@
           id="dropdownUser1"
           data-bs-toggle="dropdown"
           aria-expanded="false"
-          >{{ userData.username }}
+          >{{ userLoggedIn.email }}
           <!-- <img
             src="https://github.com/mdo.png"
             alt="mdo"
