--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
       class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
     >
       <a
-        [routerLink]="['/user', userLoggedIn.password]"
+        [routerLink]="['/home']"
         class="d-flex align-items-center mb-2 mb-lg-0 me-5"
       >
         <fa-icon [icon]="faChartPie"></fa-icon>
@@ -12,20 +12,35 @@
       <ul
         class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
       >
-        <li><a class="nav-link px-2 link-secondary">Markets</a></li>
-        <!-- <li><a class="nav-link px-2 link-dark">Inventory</a></li>
-        <li><a class="nav-link px-2 link-dark">Customers</a></li>
+        <li class="nav-item">
+          <a
+            [routerLink]="'/home'"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="nav-link active px-2 link-dark"
+            >Markets</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            [routerLink]="['/user', userLoggedIn.password]"
+            routerLinkActive="active"
+            class="nav-link active px-2 link-dark"
+            >Inventory</a
+          >
+        </li>
+        <!-- <li><a class="nav-link px-2 link-dark">Customers</a></li>
         <li><a class="nav-link px-2 link-dark">Products</a></li> -->
       </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+      <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
         <input
           type="search"
           class="form-control"
           placeholder="Search..."
           aria-label="Search"
         />
-      </form>
+      </form> -->
       <div class="dropdown text-end">
         <a
           appDropdown
