--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -60,7 +60,13 @@
         <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
           <!-- <li><a class="dropdown-item">New project...</a></li>
           <li><a class="dropdown-item">Settings</a></li> -->
-          <li><a class="dropdown-item">Profile</a></li>
+          <li>
+            <a
+              [routerLink]="['/user', userLoggedIn.password, 'edit']"
+              class="dropdown-item"
+              >Profile</a
+            >
+          </li>
           <!-- <li><hr class="dropdown-divider" /></li> -->
           <li><a class="dropdown-item" (click)="onLogout()">Sign out</a></li>
         </ul>
