--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,70 +1,16 @@
-<!-- <header class="p-3 mb-3 border-bottom">
-  <div class="container">
-    <div
-      class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
-    >
-      <a
-        [routerLink]="['/home']"
-        class="d-flex align-items-center mb-2 mb-lg-0 me-5"
-      >
-        <fa-icon [icon]="faChartPie"></fa-icon>
-      </a>
-      <ul
-        class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
-      >
-        <li class="nav-item">
-          <a
-            [routerLink]="'/home'"
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-            class="nav-link active px-2 link-dark"
-            >Markets</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            [routerLink]="['/user', userLoggedIn.password]"
-            routerLinkActive="active"
-            class="nav-link active px-2 link-dark"
-            >Inventory</a
-          >
-        </li>
-
-      </ul>
-
-
-      <div class="dropdown text-end">
-        <a
-          appDropdown
-          class="d-block link-dark text-decoration-none dropdown-toggle"
-          id="dropdownUser1"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-          >{{ userLoggedIn.email }}
-
-        </a>
-        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-
-          <li>
-            <a
-              [routerLink]="['/user', userLoggedIn.password, 'edit']"
-              class="dropdown-item"
-              >Profile</a
-            >
-          </li>
-
-          <li><a class="dropdown-item" (click)="onLogout()">Sign out</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</header> -->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" [routerLink]="['/home']"
-      ><fa-icon class="text-primary" [icon]="faChartPie"></fa-icon
-    ></a>
+    <a
+      class="navbar-brand ms-4 d-flex align-items-center"
+      [routerLink]="['/home']"
+    >
+      <div>
+        <fa-icon class="text-primary" [icon]="faChartPie"></fa-icon>
+      </div>
+      <div class="ms-3">
+        <span class="align-self-center" id="logo" class="mb-5"> COINCAKE</span>
+      </div>
+    </a>
     <button
       (click)="isCollapsed = !isCollapsed"
       class="navbar-toggler"
@@ -78,59 +24,61 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div
-      class="collapse navbar-collapse"
+      class="collapse navbar-collapse w-100 justify-content-between"
       [ngbCollapse]="isCollapsed"
       id="navbarNavDropdown"
     >
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a
-            [routerLink]="'/home'"
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-            class="nav-link active"
-            aria-current="page"
-            >Markets</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            [routerLink]="['/user', userLoggedIn.password]"
-            routerLinkActive="active"
-            class="nav-link"
-            >Inventory</a
-          >
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            routerLinkActive="active"
-            appDropdown
-            class="nav-link dropdown-toggle"
-            id="navbarDropdownMenuLink"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            {{ userLoggedIn.email }}
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <!-- <li><a class="dropdown-item" >Action</a></li> -->
-            <li>
-              <a
-                [routerLink]="['/user', userLoggedIn.password, 'edit']"
-                class="dropdown-item"
-                >Profile</a
-              >
-            </li>
-            <li>
-              <a (click)="onLogout()" class="dropdown-item">Log Out</a>
-            </li>
-          </ul>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" >Pricing</a>
-        </li> -->
-      </ul>
+      <div class="ms-4">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              [routerLink]="'/home'"
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{ exact: true }"
+              class="nav-link active"
+              aria-current="page"
+              >Markets</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              [routerLink]="['/user', userLoggedIn.password]"
+              routerLinkActive="active"
+              class="nav-link"
+              >Inventory</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="ms-4">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a
+              routerLinkActive="active"
+              appDropdown
+              class="nav-link dropdown-toggle"
+              id="navbarDropdownMenuLink"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              {{ userLoggedIn.email }}
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li>
+                <a
+                  [routerLink]="['/user', userLoggedIn.password, 'edit']"
+                  class="dropdown-item"
+                  >Profile</a
+                >
+              </li>
+              <li>
+                <a (click)="onLogout()" class="dropdown-item">Log Out</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="collapse navbar-collapse float-end">
       <ul class="navbar-nav"></ul>
