--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,7 +32,7 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a
-              [routerLink]="'/home'"
+              [routerLink]="'/markets'"
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: true }"
               class="nav-link active"
