--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a
       class="navbar-brand ms-4 d-flex align-items-center"
-      [routerLink]="['/home']"
+      [routerLink]="['/markets']"
     >
       <div>
         <fa-icon class="text-primary" [icon]="faChartPie"></fa-icon>
