--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -188,6 +188,15 @@
                   </button>
                 </div>
               </div>
+              &nbsp;
+              <div class="col-sm-12 text-center">
+                <a
+                  style="text-decoration: none"
+                  class="mt-1 me-3"
+                  (click)="turnOffForgotPassword()"
+                  ><fa-icon [icon]="faArrowLeft"></fa-icon> Login Page</a
+                >
+              </div>
             </div>
           </div>
         </form>
