--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,3 +1,7 @@
-<h5>
-  URL is wrong, redirecting to home page. Please wait...{{ displayTimer }}
-</h5>
+<div class="container d-flex align-items-center justify-content-center">
+  <div class="section">
+    <h5>
+      Wrong Url, redirecting to home page. Please wait...{{ displayTimer }}
+    </h5>
+  </div>
+</div>
