--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,7 +25,7 @@
     </button>
     <div
       class="collapse navbar-collapse w-100 justify-content-between"
-      [ngbCollapse]="isCollapsed"
+      [ngbCollapse]="!isCollapsed"
       id="navbarNavDropdown"
     >
       <div class="ms-4">
