html market price bug fixed + calendar date placeholder added

--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -11,3 +11,9 @@ fa-icon {
 .red {
   color: red;
 }
+select.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+input.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
