--- a/src/app/shared/loading-spinner/loading-spinner.component.css
+++ b/src/app/shared/loading-spinner/loading-spinner.component.css
@@ -6,9 +6,9 @@
 .lds-dual-ring:after {
   content: " ";
   display: block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
+  width: 40px;
+  height: 40px;
+  margin: auto;
   border-radius: 50%;
   border: 6px solid black;
   border-color: black transparent black transparent;
