--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="col-sm-1">
-          <button [disabled]="!coinForm.valid" class="btn" type="submit">
+          <button class="btn" type="submit">
             <fa-icon [icon]="faPlus"></fa-icon>
           </button>
         </div>
